[sway] deeper/darker greens

--- a/linux/waybar/style.css
+++ b/linux/waybar/style.css
@@ -4,7 +4,7 @@
 }
 
 window#waybar {
-  background-color: #182d2a;
+  background-color: #041010;
   border-radius: 0;
   border: none;
   color: #eeffee;
