--- a/linux/waybar/style.css
+++ b/linux/waybar/style.css
@@ -1,6 +1,6 @@
 * {
   font-family: Berkeley Mono;
-  font-size: 12px;
+  font-size: 13px;
 }
 
 window#waybar {
@@ -14,13 +14,12 @@ window#waybar {
 
 /* hyprland */
 #workspaces {
-  margin-left: 7px;
+  margin: 0 0.5em;
 }
 
 #workspaces button {
   all: initial;
-  padding: 2px 6px;
-  margin-right: 3px;
+  margin: 0 0.5em;
   color: #999999;
 }
 
@@ -33,25 +32,29 @@ window#waybar {
   color: #ededed;
   font-weight: 800;
 }
+#workspaces button.urgent {
+  color: red;
+}
 
-#custom-dropbox,
+#custom-date,
+#custom-notification,
 #cpu,
 #battery,
 #network,
 #bluetooth,
 #pulseaudio,
 #custom-power-menu {
-  min-width: 12px;
-  margin-right: 10px;
+  min-width: 1em;
+  margin: 0 0.5em;
 }
 
 #clock {
 }
 
 tooltip {
-  padding: 2px;
+  padding: 0.25em;
 }
 
 tooltip label {
-  padding: 2px;
+  padding: 0.25em;
 }
