--- a/linux/waybar/style.css
+++ b/linux/waybar/style.css
@@ -19,7 +19,7 @@ window#waybar {
 
 #workspaces button {
   all: initial;
-  margin: 0 0.5em;
+  padding: 0 0.5em;
   color: #999999;
 }
 
@@ -30,10 +30,10 @@ window#waybar {
 
 #workspaces button.focused {
   color: #ededed;
-  font-weight: 800;
+  font-weight: 600;
 }
 #workspaces button.urgent {
-  color: red;
+  color: pink;
 }
 
 #battery,
